# compile-timer

./: .gitignore  CMakeLists.txt  CompileTimer.pro  README.md
src/: main.cc
